grid view now available. Images will be shown in results. last view saved. image size adjusted to grid item size. search limit is now 9 elements(3x3 grid). show more button changed. geoLoc .append() changed to .html(). /Download/file is now download. preview is at /Preview/file. icon for preview on new tab added. tags wrapping fixed. removed spaces from tags before sending via link

--- a/DocDB/public/stylesheets/main.css
+++ b/DocDB/public/stylesheets/main.css
@@ -21,3 +21,33 @@ div #outer{
  #linkUpload{
  margin: 0 auto;
  }
+
+#listGridDiv{
+	text-align: right;
+	position: relative;
+	top: -12px;
+	line-height: 0px;
+}
+
+.gridView.singleResultDiv {
+	width: 33%;
+	display: inline-table;
+}
+
+.gridView.panel-body{
+	height: 150px;
+	overflow-y: auto;
+}
+.gridView img{
+	max-width: 100%;
+}
+.listView img {
+	max-height: 200px;
+}
+
+#resultDiv .glyphicon{
+	position:relative;
+	top:-5px;
+	margin: 0 2px;
+	float:right;
+}
